<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/Title"
        android:textColor="#d40d53"
        android:layout_marginTop="77dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="75dip" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_below="@+id/name_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />

    <EditText
        android:id="@+id/name_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_message"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/type_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_message"
        android:layout_alignBottom="@+id/title"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

    <EditText
        android:id="@+id/class_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/class_message"
        android:layout_below="@+id/edit_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
